<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contador de Calorías</string>
    <string name="action_perfil">Perfil</string>
    <string name="action_consulta">Consulta de Calorías</string>
    <string name="action_contador">Contador</string>
    <string name="action_salir">Salir</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="title_activity_consulta">Consulta</string>
    <string name="title_activity_contador">Contador</string>
    <string name="menu">Menú</string>
    <string name="bienvenida">¡Bienvenido!</string>
    <string name="datos_personales">Datos personales</string>
    <string name="perfil_estatura">Estatura</string>
    <string name="perfil_cm">cm</string>
    <string name="perfil_peso">Peso</string>
    <string name="perfil_kg">kg</string>
    <string name="perfil_edad">Edad</string>
    <string name="perfil_años">años</string>
    <string name="perfil_sexo">Sexo</string>
    <string name="perfil_masculino">Hombre</string>
    <string name="perfil_femenino">Mujer</string>
    <string name="perfil_meta">Meta</string>
    <string name="perder_peso">Perder peso</string>
    <string name="mantener_peso">Mantener peso</string>
    <string name="ganar_peso">Ganar peso</string>
    <string name="actividad_fisica">Actividad física</string>
    <string name="act_fisica_ninguna">Ninguna</string>
    <string name="act_fisica_ligera">Ligera</string>
    <string name="act_fisica_moderada">Moderada</string>
    <string name="act_fisica_intensa">Intensa</string>
    <string name="act_fisica_muy_intensa">Muy intensa</string>
    <string name="perfil_guardar">Guardar</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="que_alimento">¿Qué alimento?</string>
    <string name="cantidad">¿Cantidad?</string>
    <string name="calorias">Calorías:</string>
    <string name="desayuno">Desayuno</string>
    <string name="comida">Comida</string>
    <string name="cena">Cena</string>
    <string name="aperitivos">Aperitivos</string>
    <string name="calcular">Terminar</string>
    <string name="titulo_calorias_meta">Calorías meta</string>
    <string name="mensaje_calorias_meta">Tu meta diaria: </string>
    <string name="titulo_error_input_perfil">Error en datos</string>
    <string translatable="false"
        name="titulo_error_input_contador">Error! </string>
    <string name="mensaje_error_input_contador">
        El alimento seleccionado no se encontró :(
    </string>
    <string name="mensaje_error_input_perfil">
        Uno o más campos están vacíos o tienen datos inválidos :(
    </string>
    <string name="calorias_agregadas">Calorías agregadas</string>
    <string name="caption_calorias">Calorías</string>

    <string name="diferencia">Diferencia</string>
    <string name="contadas">Contadas</string>
    <string name="not_found">No se encontró :(</string>
    <string name="consumo_agregado">Consumo agregado</string>
    <string name="advertencia_calorias_meta">Debe primero establecer sus calorías meta antes de empezar con su plan calórico</string>

</resources>
