<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="cc.se2.uanl.edu.contadordecalorias.PerfilActivity">

    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/datos_personales"
    android:id="@+id/datos_personales"
    android:textSize="25sp" android:textColor="@color/azul_real"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_estatura"
        android:textSize="18sp"
        android:id="@+id/perfil_estatura"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/datos_personales"
        android:layout_above="@+id/perfil_kg" />

    <TextView
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:text="@string/perfil_peso"
        android:textSize="18sp"
        android:id="@+id/perfil_peso"
        android:layout_alignTop="@+id/perfil_kg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="cm"
        android:gravity="right"
        android:ems="8"
        android:id="@+id/perfil_cm"
        android:layout_toRightOf="@+id/perfil_estatura"
        android:layout_toEndOf="@+id/perfil_estatura"
        android:layout_below="@+id/datos_personales" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:hint="kg"
        android:gravity="right"
        android:ems="8"
        android:id="@+id/perfil_kg"
        android:layout_below="@+id/perfil_cm"
        android:layout_toRightOf="@+id/perfil_estatura"
        android:layout_toEndOf="@+id/perfil_estatura" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/perfil_sexo"
        android:id="@+id/perfil_sexo"
        android:layout_below="@+id/perfil_años"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_masculino"
        android:id="@+id/perfil_masculino"
        android:checked="false"
        android:layout_below="@+id/perfil_años"
        android:layout_toRightOf="@+id/perfil_femenino"
        android:layout_toEndOf="@+id/perfil_femenino" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_femenino"
        android:id="@+id/perfil_femenino"
        android:checked="false"
        android:layout_alignTop="@+id/perfil_masculino"
        android:layout_alignLeft="@+id/perfil_años"
        android:layout_alignStart="@+id/perfil_años" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_edad"
        android:textSize="18sp"
        android:id="@+id/perfil_edad"
        android:layout_below="@+id/perfil_kg"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="8"
        android:hint="años"
        android:gravity="right"
        android:id="@+id/perfil_años"
        android:layout_alignTop="@+id/perfil_edad"
        android:layout_toRightOf="@+id/perfil_edad"
        android:layout_alignRight="@+id/perfil_kg"
        android:layout_alignEnd="@+id/perfil_kg" />

    <TextView
        android:text="@string/perfil_meta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/azul_real"
        android:id="@+id/perfil_meta"
        android:layout_below="@+id/perfil_masculino"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perder_peso"
        android:id="@+id/perder_peso"
        android:layout_below="@+id/perfil_meta"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mantener_peso"
        android:id="@+id/mantener_peso"
        android:layout_below="@+id/perder_peso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ganar_peso"
        android:id="@+id/ganar_peso"
        android:layout_below="@+id/mantener_peso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actividad_fisica"
        android:id="@+id/actividad_fisica"
        android:textSize="25sp" android:textColor="@color/azul_real"
        android:layout_below="@+id/ganar_peso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_fisica_ninguna"
        android:id="@+id/act_fisica_ninguna"
        android:layout_below="@+id/actividad_fisica"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_fisica_ligera"
        android:id="@+id/act_fisica_ligera"
        android:checked="false"
        android:layout_above="@+id/act_fisica_muy_intensa"
        android:layout_centerHorizontal="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_fisica_moderada"
        android:id="@+id/act_fisica_moderada"
        android:checked="false"
        android:layout_above="@+id/act_fisica_muy_intensa"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_fisica_intensa"
        android:id="@+id/act_fisica_intensa"
        android:layout_below="@+id/act_fisica_ninguna"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:checked="false" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/act_fisica_muy_intensa"
        android:id="@+id/act_fisica_muy_intensa"
        android:checked="false"
        android:layout_alignTop="@+id/act_fisica_intensa"
        android:layout_alignLeft="@+id/act_fisica_ligera"
        android:layout_alignStart="@+id/act_fisica_ligera" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/perfil_guardar"
        android:id="@+id/perfil_guardar"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/act_fisica_intensa"
        android:layout_toEndOf="@+id/act_fisica_intensa" />

</RelativeLayout>
