<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Search, should appear as action button -->
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        android:showAsAction="ifRoom" />
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_perfil"
        android:title="@string/action_perfil"
        android:showAsAction="never" />
    <item android:id="@+id/action_consulta"
        android:title="@string/action_consulta"
        android:showAsAction="never" />
    <item android:id="@+id/action_contador"
        android:title="@string/action_contador"
        android:showAsAction="never" />
    <item android:id="@+id/action_salir"
        android:title="@string/action_salir"
        android:showAsAction="never" />
</menu>

<!--<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    &lt;!&ndash; Settings, should always be in the overflow &ndash;&gt;
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>-->
